Regression in clipboard on wayland caused by 0136048d
Originally opened as gnome-terminal#316 (closed). I have finally bisected and found that 0136048d has broken clipboard in vte on wayland.
commit 0136048d32d29412de3381828bb21f05563c799f
Author: Christian Persch <chpe@src.gnome.org>
Date: Mon Oct 19 21:14:43 2020 +0200
widget: Move clipboard handling to Widget
Move clipboard handling into its own Clipboard class to make
Terminal independent of the platform's clipboard handling.
[gtk4 preparation]
This bug is not related to gnome-terminal#200 (moved).
To reproduce the bug, run gnome-terminal or vte in Wayland, copy any selected text from it and try to paste in a different application. The copied text will not be pasted.
Edited by Valentin David