widget: Fix clipboard types

https://gitlab.gnome.org/GNOME/vte/-/issues/316